[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/Player/Platform2DPlayerController.gd" type="Script" id=1]
[ext_resource path="res://Animations/Player/Soso MASTER animation.json" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SoundFX/SFXManager.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Shoot1.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Explosion3.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Pickup1.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 5.0
height = 10.0

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "collision" ]
__meta__ = {
"_edit_lock_": true
}
playerMaxSpeed = 200
acceleration = 0.2
jumpForce = 370
jumpCount = 1

[node name="Body" type="Node2D" parent="." index="0"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="PlayerAnimation" parent="Body" index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="FireOrigin_RIGHT" type="Position2D" parent="Body" index="1"]

position = Vector2( 18, 9 )

[node name="ThrowDirection" type="RayCast2D" parent="Body" index="2"]

position = Vector2( 15, -5 )
enabled = false
exclude_parent = true
cast_to = Vector2( 15, -10 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="PlayerShapeWalk" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 6 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerShapeCrunch" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 10 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="TriggerDetector" type="Area2D" parent="." index="3"]

editor/display_folded = true
visible = false
position = Vector2( 0, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerDetector" index="0"]

visible = false
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="SoundFXPlayer" type="Node2D" parent="." index="4"]

editor/display_folded = true
script = ExtResource( 3 )

[node name="Shoot1" type="AudioStreamPlayer2D" parent="SoundFXPlayer" index="0"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Explosion1" type="AudioStreamPlayer2D" parent="SoundFXPlayer" index="1"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Pickup" type="AudioStreamPlayer" parent="SoundFXPlayer" index="2"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Camera2D" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[connection signal="area_entered" from="TriggerDetector" to="." method="_on_TriggerDetector_area_entered"]

[connection signal="area_exited" from="TriggerDetector" to="." method="_on_TriggerDetector_area_exited"]


